--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
             color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
         }
         nav {
             margin-bottom: 20px;
@@ -55,8 +52,7 @@
 </header>
 
 <nav>
-    <a href="interaction.html">互動端點 URL</a>
-    <a href="verify.html">建構角色驗證 URL</a>
+    <a href="index.html">首頁</a>
     <a href="terms.html">服務條款</a>
     <a href="privacy.html">隱私權政策</a>
 </nav>
