--- a/privacy.html
+++ b/privacy.html
@@ -9,30 +9,41 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #121212;
+            color: #ffffff;
         }
         header {
-            background-color: #7289da;
+            background-color: #1e1e1e;
             color: white;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
+            position: relative;
+        }
+        header img {
+            width: 100px;
+            position: absolute;
+            left: 20px;
+            top: 20px;
         }
         .container {
             width: 80%;
             margin: 0 auto;
             padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
         }
         h1, h2, h3 {
-            color: #333;
+            color: #00ccff;
         }
         .section {
             margin-bottom: 40px;
         }
         footer {
-            background-color: #333;
+            background-color: #1e1e1e;
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 20px 0;
+            position: relative;
         }
         nav {
             margin-bottom: 20px;
@@ -40,14 +51,27 @@
         }
         nav a {
             margin: 0 15px;
-            color: #7289da;
+            color: #00ccff;
             text-decoration: none;
+        }
+        body::before {
+            content: "";
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            z-index: -1;
+            filter: blur(5px);
         }
     </style>
 </head>
 <body>
 
 <header>
+    <img src="dc bot.png" alt="Maomy BOT">
     <h1>Maomy BOT 網頁</h1>
 </header>
 
