--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             color: white;
             text-align: center;
             padding: 20px 0;
-            position: relative;
+            position: bottom;
         }
         nav {
             margin-bottom: 20px;
