--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maomy BOT 網頁</title>
+    <link rel="icon" href="background.jpg" type="image/jpg" />
+    <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
+    <title>Maomy BOT</title>
     <style>
         body {
             font-family: Arial, sans-serif;
