--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="background.jpg" type="image/jpg" />
-    <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
-    <title>Maomy BOT</title>
+    <title>Maomy BOT 網頁</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,11 +19,18 @@
             text-align: center;
             position: relative;
         }
-        header img {
-            width: 100px;
-            position: absolute;
-            left: 20px;
-            top: 20px;
+        .invite-btn {
+            background-color: #00ccff;
+            color: #121212;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .invite-btn:hover {
+            background-color: #00aaff;
         }
         .container {
             width: 80%;
@@ -45,7 +50,7 @@
             color: white;
             text-align: center;
             padding: 20px 0;
-            position: bottom;
+            position: relative;
         }
         nav {
             margin-bottom: 20px;
@@ -73,7 +78,7 @@
 <body>
 
 <header>
-    <img src="dc bot.png" alt="Maomy BOT">
+    <a href="https://lurl.cc/q6SWVc" class="invite-btn">邀請Bot</a>
     <h1>Maomy BOT 網頁</h1>
 </header>
 
