--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="background.jpg" type="image/jpg" />
     <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
     <meta property="og:image" content="https://maomy.ddns.net/background.jpg">
-    <title>Maomy BOT隱私權政策</title>
+    <title>隱私權政策</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,11 +22,18 @@
             text-align: center;
             position: relative;
         }
-        header img {
-            width: 100px;
-            position: absolute;
-            left: 20px;
-            top: 20px;
+        .invite-btn {
+            background-color: #00ccff;
+            color: #121212;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .invite-btn:hover {
+            background-color: #00aaff;
         }
         .container {
             width: 80%;
@@ -74,7 +81,7 @@
 <body>
 
 <header>
-    <img src="dc bot.png" alt="Maomy BOT">
+    <a href="https://lurl.cc/q6SWVc" class="invite-btn">邀請Bot</a>
     <h1>Maomy BOT 網頁</h1>
 </header>
 
@@ -86,20 +93,150 @@
 
 <div class="container">
     <div class="section" id="privacy-policy">
-        <h2>隱私權政策</h2>
-        <p>我們非常重視您的隱私。以下是我們的隱私政策：</p>
+        <h1>隱私權政策</h1>
+        <p>最後更新日期：2024年5月31日</p>
+        <p>本隱私權政策描述我們在您使用本服務時收集、使用和披露您的資訊的政策和程序，並告訴您您的隱私權以及法律如何保護您。</p>
+        <p>我們使用您的個人資料來提供和改進服務。通過使用服務，您同意根據本隱私政策收集和使用信息。本隱私政策已由<a href="https://www.privacypolicies.com/privacy-policy-generator/" target="_blank">隱私政策生成器</a>創建。</p>
+
+        <h2>解釋和定義</h2>
+        <h3>解釋</h3>
+        <p>首字母大寫的單詞具有在下列條件下定義的含義。這些定義無論出現在單數或複數形式中均具有相同的意義。</p>
+
+        <h3>定義</h3>
+        <p>就本隱私政策而言：</p>
         <ul>
-            <li>我們收集的資料僅用於提供和改進我們的服務。</li>
-            <li>我們不會與第三方分享您的個人資料，除非法律要求。</li>
-            <li>我們會採取合理的措施保護您的個人資料免受未經授權的訪問和使用。</li>
+            <li>
+                <p><strong>帳戶</strong> 是指為您創建的唯一帳戶以訪問我們的服務或部分服務。</p>
+            </li>
+            <li>
+                <p><strong>附屬機構</strong> 指控制方、被控制方或與一方共同控制的實體，其中“控制”是指擁有50％或以上的投票權股份、股權或其他有權選舉董事或其他管理權力的證券。</p>
+            </li>
+            <li>
+                <p><strong>應用程式</strong> 是指由公司提供的Maomy BOT軟件程序。</p>
+            </li>
+            <li>
+                <p><strong>公司</strong> （在本協議中稱為“公司”，“我們”，“我們的”或“我們的”）是指Maomy BOT。</p>
+            </li>
+            <li>
+                <p><strong>國家</strong> 是指：台灣</p>
+            </li>
+            <li>
+                <p><strong>設備</strong> 是指任何能夠訪問服務的設備，例如計算機、手機或數字平板電腦。</p>
+            </li>
+            <li>
+                <p><strong>個人資料</strong> 是指與已識別或可識別的個人有關的任何信息。</p>
+            </li>
+            <li>
+                <p><strong>服務</strong> 是指應用程式。</p>
+            </li>
+            <li>
+                <p><strong>服務提供商</strong> 是指代表公司處理數據的任何自然人或法人。它指的是公司聘請的第三方公司或個人來促進服務，代表公司提供服務，執行與服務相關的服務或協助公司分析如何使用服務。</p>
+            </li>
+            <li>
+                <p><strong>使用數據</strong> 是指自動收集的數據，無論是由使用服務還是從服務基礎設施本身（例如，頁面訪問的持續時間）生成。</p>
+            </li>
+            <li>
+                <p><strong>您</strong> 是指訪問或使用服務的個人，或代表其訪問或使用服務的公司或其他法律實體。</p>
+            </li>
         </ul>
-        <p>詳細內容請參閱：<a href="https://my-cool-app.com/privacy-policy">https://my-cool-app.com/privacy-policy</a></p>
+
+        <h2>收集和使用您的個人資料</h2>
+        <h3>收集的數據類型</h3>
+        <h4>個人資料</h4>
+        <p>在使用我們的服務時，我們可能會要求您向我們提供某些可識別的個人信息，可用於聯繫或識別您。可識別的個人信息可能包括但不限於：</p>
+        <ul>
+            <li>使用數據</li>
+        </ul>
+        <h4>使用數據</h4>
+        <p>在使用服務時會自動收集使用數據。</p>
+        <p>使用數據可能包括您的設備的Internet協議地址（例如IP地址）、瀏覽器類型、瀏覽器版本、您訪問我們的服務的頁面、訪問的時間和日期、在那些頁面上花費的時間、唯一設備標識符和其他診斷數據。</p>
+        <p>當您通過移動設備訪問服務時，我們可能會自動收集某些信息，包括但不限於您使用的移動設備類型、您的移動設備唯一ID、您的移動設備的IP地址、您的移動操作系統、您使用的移動Internet瀏覽器的類型、唯一設備標識符和其他診斷數據。</p>
+        <p>我們也可能會收集您的瀏覽器在您訪問我們的服務時或通過移動設備訪問服務時發送的信息。</p>
+
+        <h3>使用您的個人資料</h3>
+        <p>公司可能會將個人資料用於以下目的：</p>
+        <ul>
+            <li>
+                <p><strong>提供和維護我們的服務</strong>，包括監控我們服務的使用情況。</p>
+            </li>
+            <li>
+                <p><strong>管理您的帳戶：</strong>管理您作為服務用戶的註冊。您提供的個人資料可以讓您訪問註冊用戶可用的服務的不同功能。</p>
+            </li>
+            <li>
+                <p><strong>履行合同：</strong>開發、遵守和承擔您通過服務購買的產品、物品或服務的購買合同或任何其他合同。</p>
+            </li>
+            <li>
+                <p><strong>聯繫您：</strong>通過電子郵件、電話、短信或其他等效的電子通信形式，例如關於功能、產品或合同服務的更新或信息通信的移動應用程序推送通知聯繫您，包括安全更新，當必要或合理地實施時。</p>
+            </li>
+            <li>
+                <p><strong>向您提供：</strong>有關其他商品、服務和事件的新聞、特別優惠和一般信息，這些商品、服務和事件與您已購買或詢問的類似，除非您已選擇不接收此類信息。</p>
+            </li>
+            <li>
+                <p><strong>管理您的請求：</strong>處理並管理您向我們提出的請求。</p>
+            </li>
+            <li>
+                <p><strong>用於商業轉讓：</strong>我們可能會使用您的信息來評估或進行合併、剝離、重組、重組、解散或出售或轉讓我們的全部或部分資產，無論是作為持續經營的一部分還是作為破產、清算或類似程序的一部分，其中包含我們關於我們服務用戶的個人數據的資產之一。</p>
+            </li>
+            <li>
+                <p><strong>其他用途：</strong>我們可能會將您的信息用於其他用途，例如數據分析、識別使用趨勢、確定我們促銷活動的有效性以及評估和改進我們的服務、產品、服務、營銷和您的體驗。</p>
+            </li>
+        </ul>
+
+        <h3>保留您的個人資料</h3>
+        <p>公司將僅在本隱私權政策規定的目的所需期間內保留您的個人資料。我們將保留和使用您的個人資料在必要範圍內，以遵守我們的法律義務（例如，如果我們需要保留您的數據以遵守適用法律）、解決爭議以及執行我們的法律協議和政策。</p>
+        <p>公司還將保留使用數據以作內部分析之用。使用數據通常會保留較短的時間，除非這些數據用於加強安全性或改進我們服務的功能，或者我們有法律義務將這些數據保留較長時間。</p>
+
+        <h3>轉移您的個人資料</h3>
+        <p>您的信息，包括個人資料，在公司的營運辦公室以及參與處理的各方所在地進行處理。這意味著此信息可能會轉移到——並維護在——您的州、省、國家或其他政府管轄區外的計算機上，那裡的數據保護法律可能與您的管轄區不同。</p>
+        <p>您對本隱私政策的同意以及您提交此類信息後，即表示您同意該轉移。</p>
+        <p>公司將採取一切合理必要的步驟，以確保您的數據安全並符合本隱私政策，除非有適當的控制措施，包括您的數據和其他個人信息的安全，否則不會將您的個人數據轉移到任何組織或國家。</p>
+
+        <h3>刪除您的個人資料</h3>
+        <p>您有權刪除或要求我們協助刪除我們收集的有關您的個人資料。</p>
+        <p>我們的服務可能會使您能夠從服務內刪除有關您的某些信息。</p>
+        <p>您可以隨時登錄您的帳戶（如果有），並訪問允許您管理個人信息的帳戶設置部分，更新、修改或刪除您的信息。您也可以聯繫我們，請求訪問、更正或刪除您提供給我們的任何個人信息。</p>
+        <p>但是，請注意，當我們有法律義務或合法依據時，我們可能需要保留某些信息。</p>
+
+        <h3>披露您的個人資料</h3>
+        <h4>商業交易</h4>
+        <p>如果公司涉及合併、收購或資產出售，您的個人資料可能會被轉移。我們將在您的個人資料轉移並受不同的隱私政策約束之前提供通知。</p>
+
+        <h4>法律執法</h4>
+        <p>在某些情況下，如果法律要求或響應公共機構（例如法院或政府機構）的有效請求，公司可能需要披露您的個人資料。</p>
+
+        <h4>其他法律要求</h4>
+        <p>公司可能會在真誠相信此類行動是必要的情況下披露您的個人資料：</p>
+        <ul>
+            <li>遵守法律義務</li>
+            <li>保護和捍衛公司的權利或財產</li>
+            <li>預防或調查與服務有關的可能不當行為</li>
+            <li>保護服務用戶或公眾的人身安全</li>
+            <li>防止承擔法律責任</li>
+        </ul>
+
+        <h3>您的個人資料的安全</h3>
+        <p>您的個人資料的安全對我們很重要，但請記住，互聯網上的傳輸方法或電子存儲方法都不是100％安全的。儘管我們努力使用商業上可接受的方法來保護您的個人資料，但我們不能保證其絕對安全。</p>
+
+        <h2>兒童隱私</h2>
+        <p>我們的服務不面向13歲以下的任何人。我們不會故意收集13歲以下任何人的可識別個人信息。如果您是父母或監護人，並且您知道您的孩子向我們提供了個人資料，請與我們聯繫。如果我們得知我們在未經父母同意的情況下收集了13歲以下任何人的個人資料，我們會採取措施將該信息從我們的服務器中刪除。</p>
+        <p>如果我們需要依賴同意作為處理您的信息的法律依據，而您的國家要求父母同意，我們可能會在收集和使用此類信息之前需要您的父母同意。</p>
+
+        <h2>鏈接到其他網站</h2>
+        <p>我們的服務可能包含指向非我們運營的其他網站的鏈接。如果您點擊第三方鏈接，您將被引導至該第三方的網站。我們強烈建議您查看您訪問的每個網站的隱私政策。</p>
+        <p>我們無法控制也不承擔任何第三方網站或服務的內容、隱私政策或做法的責任。</p>
+
+        <h2>本隱私政策的變更</h2>
+        <p>我們可能會不時更新我們的隱私政策。我們將通過在本頁面上發布新隱私政策來通知您任何變更。</p>
+        <p>在變更生效之前，我們會通過電子郵件和/或在我們的服務上顯著通知您，並更新本隱私政策頂部的“最後更新”日期。</p>
+        <p>建議您定期查看本隱私政策以了解任何變更。對本隱私政策的更改在本頁面發布時生效。</p>
+
+        <h2>聯繫我們</h2>
+        <p>如果您對本隱私政策有任何疑問，您可以聯繫我們：</p>
+        <ul>
+            <li>通過訪問我們網站上的此頁面：<a href="https://maomy.ddns.net/" rel="external nofollow noopener" target="_blank">https://maomy.ddns.net/</a></li>
+        </ul>
     </div>
 </div>
-
-<footer>
-    <p>&copy; 2024 Maomy BOT 團隊. 保留所有權利.</p>
-</footer>
 
 </body>
 </html>
