--- a/terms.html
+++ b/terms.html
@@ -93,13 +93,58 @@
 
 <div class="container">
     <div class="section" id="terms-of-service">
-        <h2>服務條款</h2>
-        <p>使用我們的Discord Bot即表示您同意以下條款：</p>
+        <h1>Maomy Bot 服務條款</h1>
+        <p>歡迎使用Maomy Bot（以下簡稱“本Bot”）。使用本Bot前，請仔細閱讀以下服務條款。本Bot的使用者（以下簡稱“用戶”）同意並接受這些條款。如不同意這些條款，請勿使用本Bot。</p>
+        
+        <h2>一、服務內容</h2>
         <ul>
-            <li>請勿使用機器人進行任何非法活動。</li>
-            <li>我們保留隨時修改或終止服務的權利。</li>
-            <li>我們對因使用本機器人所造成的任何損害不承擔責任。</li>
+            <li>本Bot提供多種功能，包括但不限於娛樂、實用工具、信息查詢等。</li>
+            <li>本Bot將定期更新並增加新的功能，但不保證所有功能的穩定性和持續性。</li>
         </ul>
+
+        <h2>二、用戶義務</h2>
+        <ul>
+            <li>用戶須遵守所在國家和地區的法律法規，不得利用本Bot從事非法活動。</li>
+            <li>用戶不得在使用本Bot時發表、傳送或散布任何違法、誹謗、侮辱、淫穢、欺詐或侵犯他人權利的內容。</li>
+            <li>用戶不得對本Bot進行任何形式的破壞、攻擊、篡改或試圖取得本Bot的源代碼。</li>
+        </ul>
+
+        <h2>三、隱私保護</h2>
+        <ul>
+            <li>本Bot可能會收集並處理用戶提供的部分信息。這些信息僅用於提供和改進本Bot的服務。</li>
+            <li>本Bot將采取合理的措施保護用戶的信息安全，但不對因不可抗力或非本Bot原因導致的信息泄露負責。</li>
+        </ul>
+
+        <h2>四、知識產權</h2>
+        <ul>
+            <li>本Bot的所有代碼、設計、標識及相關資料均屬於本Bot開發者所有，受著作權法及其他相關法律保護。</li>
+            <li>未經本Bot開發者的書面許可，用戶不得以任何形式使用、復制、修改、分發本Bot的任何部分。</li>
+        </ul>
+
+        <h2>五、免責聲明</h2>
+        <ul>
+            <li>本Bot在提供服務過程中可能會遇到不可預見的技術問題或其他問題，對此本Bot不承擔任何責任。</li>
+            <li>用戶使用本Bot所產生的任何風險由用戶自行承擔，本Bot不對用戶使用過程中出現的任何損失或損害負責。</li>
+        </ul>
+
+        <h2>六、修改與終止</h2>
+        <ul>
+            <li>本Bot保留在任何時間修改或更新本服務條款的權利，修改後的條款將在本Bot的相關公告中通知用戶。</li>
+            <li>用戶繼續使用本Bot即表示接受修改後的條款。如用戶不同意修改後的條款，請立即停止使用本Bot。</li>
+            <li>本Bot保留在任何時間終止或暫停本Bot服務的權利，無需事先通知用戶。</li>
+        </ul>
+
+        <h2>七、其他</h2>
+        <ul>
+            <li>本服務條款構成用戶與本Bot之間的完整協議，並取代先前的所有協議和諒解。</li>
+            <li>如本服務條款的任何條款被認定為無效或不可執行，其餘條款仍然有效並具有約束力。</li>
+        </ul>
+
+        <p>感謝您使用Maomy Bot，如有任何疑問或建議，請隨時與我們聯繫。</p>
+
+        <p>此服務條款自發布之日起生效。</p>
+
+        <p>Maomy Bot 開發團隊</p>
     </div>
 </div>
 
