--- a/terms.html
+++ b/terms.html
@@ -142,7 +142,7 @@
 
         <p>感謝您使用Maomy Bot，如有任何疑問或建議，請隨時與我們聯繫。</p>
 
-        <p>此服務條款自發布之日起生效。</p>
+        <p>此服務條款自5/31起生效。</p>
 
         <p>Maomy Bot 開發團隊</p>
     </div>
