--- a/privacy.html
+++ b/privacy.html
@@ -87,6 +87,7 @@
 
 <nav>
     <a href="index.html">首頁</a>
+    <a href="about.html">關於我們</a>
     <a href="terms.html">服務條款</a>
     <a href="privacy.html">隱私權政策</a>
 </nav>
