--- a/about.html
+++ b/about.html
@@ -44,6 +44,18 @@
     </style>
 </head>
 <body>
+    <header>
+    <a href="https://lurl.cc/q6SWVc" class="invite-btn">邀請Bot</a>
+    <h1>Maomy BOT 網頁</h1>
+    </header>
+    
+    <nav>
+        <a href="index.html">首頁</a>
+        <a href="about.html">關於我們</a>
+        <a href="terms.html">服務條款</a>
+        <a href="privacy.html">隱私權政策</a>
+    </nav>
+    
     <div class="container">
         <h1>關於我們</h1>
         <p>歡迎來到Maomy Bot的開發團隊介紹頁面。我們是一群充滿熱情和創造力的開發者，致力於為您提供最優質的Discord機器人服務。</p>
