--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             color: #00ccff;
             text-decoration: none;
         }
+        a {
+            margin: 0 15px;
+            color: #00ccff;
+            text-decoration: none;
+        }
         body::before {
             content: "";
             background: url('background.jpg') no-repeat center center fixed;
