--- a/about.html
+++ b/about.html
@@ -7,39 +7,76 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
             margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
+            padding: 0;
+            background-color: #121212;
+            color: #ffffff;
+        }
+        header {
+            background-color: #1e1e1e;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            position: relative;
+        }
+        .invite-btn {
+            background-color: #00ccff;
+            color: #121212;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .invite-btn:hover {
+            background-color: #00aaff;
         }
         .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
+            width: 80%;
+            margin: 0 auto;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
         }
-        h1 {
+        h1, h2, h3 {
+            color: #00ccff;
+        }
+        .section {
+            margin-bottom: 40px;
+        }
+        footer {
+            background-color: #1e1e1e;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            position: relative;
+        }
+        nav {
+            margin-bottom: 20px;
             text-align: center;
         }
-        .team-member {
-            margin-bottom: 20px;
+        nav a {
+            margin: 0 15px;
+            color: #00ccff;
+            text-decoration: none;
         }
-        .team-member h2 {
-            margin-top: 0;
+        a {
+            margin: 0 15px;
+            color: #00ccff;
+            text-decoration: none;
         }
-        .team-member p {
-            margin: 5px 0;
-        }
-        .team-member img {
-            max-width: 150px;
-            border-radius: 50%;
-            float: left;
-            margin-right: 20px;
-        }
-        .clear {
-            clear: both;
+        body::before {
+            content: "";
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            z-index: -1;
+            filter: blur(5px);
         }
     </style>
 </head>
