--- a/about.html
+++ b/about.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於我們 - Maomy Bot 開發團隊</title>
+    <link rel="icon" href="background.jpg" type="image/jpg" />
+    <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
+    <meta property="og:image" content="https://maomy.ddns.net/background.jpg">
+    <title>Maomy BOT 團隊</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -82,8 +85,8 @@
 </head>
 <body>
     <header>
-    <a href="https://lurl.cc/q6SWVc" class="invite-btn">邀請Bot</a>
-    <h1>Maomy BOT 網頁</h1>
+        <a href="https://lurl.cc/q6SWVc" class="invite-btn">邀請Bot</a>
+        <h1>Maomy BOT 網頁</h1>
     </header>
     
     <nav>
@@ -92,7 +95,6 @@
         <a href="terms.html">服務條款</a>
         <a href="privacy.html">隱私權政策</a>
     </nav>
-    
     <div class="container">
         <h1>關於我們</h1>
         <p>歡迎來到Maomy Bot的開發團隊介紹頁面。我們是一群充滿熱情和創造力的開發者，致力於為您提供最優質的Discord機器人服務。</p>
