--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
             text-decoration: none;
         }
         a {
+            margin-bottom: 20px;
+            text-align: center;
             margin: 0 15px;
             color: #00ccff;
             text-decoration: none;
