--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
             text-decoration: none;
         }
         a {
-            margin-bottom: 20px;
-            text-align: center;
-            margin: 0 15px;
-            color: #00ccff;
+            background-color: #00ccff;
+            color: #121212;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
             text-decoration: none;
+            font-size: 16px;
         }
         body::before {
             content: "";
