--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             color: #00ccff;
             text-decoration: none;
         }
-        a {
+        .button-cool {
             background-color: #00ccff;
             color: #121212;
             padding: 10px 20px;
@@ -104,9 +104,9 @@
 
 <div class="container">
     <div class="section" id="introduction">
-    <h1>歡迎來到Maomy BOT官方網頁！</h1>
-        <h2><a href="https://discord.com/invite/uesZG4ZfKq">Maomy BOT官方Discord群組</a></h2>
-        <h2><a href="https://lurl.cc/q6SWVc">邀請Maomy BOT</a></h2>
+        <h1>歡迎來到Maomy BOT官方網頁！</h1>
+        <h2><a class="button-cool" href="https://discord.com/invite/uesZG4ZfKq">Maomy BOT官方Discord群組</a></h2>
+        <h2><a class="button-cool" href="https://lurl.cc/q6SWVc">邀請Maomy BOT</a></h2>
         <p>這個機器人可以幫助您管理伺服器、提供遊戲功能、以及更多其他有趣的功能。</p>
         
         <h2>RPG系統</h2>
