--- a/about.html
+++ b/about.html
@@ -100,10 +100,10 @@
         <p>歡迎來到Maomy Bot的開發團隊介紹頁面。我們是一群充滿熱情和創造力的開發者，致力於為您提供最優質的Discord機器人服務。</p>
 
         <div class="team-member">
-            <img src="maomy.jpg" alt="開發者1">
-            <h2>Maomy</h2>
-            <p><strong>職位：</strong>創始人兼首席開發者</p>
-            <p><strong>介紹：</strong>Maomy擁有多年的軟體開發經驗，專注於Discord機器人開發。他致力於為用戶提供最好的機器人互動體驗。</p>
+            <img src="maomy.jpg" alt="開發者1" height=35px width=35px>
+                <h2>Maomy</h2>
+                <p><strong>職位：</strong>創始人兼首席開發者</p>
+                <p><strong>介紹：</strong>Maomy擁有多年的軟體開發經驗，專注於Discord機器人開發。他致力於為用戶提供最好的機器人互動體驗。</p>
             <div class="clear"></div>
         </div>
 
