--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         <p>歡迎來到Maomy Bot的開發團隊介紹頁面。我們是一群充滿熱情和創造力的開發者，致力於為您提供最優質的Discord機器人服務。</p>
 
         <div class="team-member">
-            <img src="maomy.jpg" alt="開發者1" height=35px width=35px>
+            <img src="maomy.jpg" alt="img" height=100px width=100px>
                 <h2>Maomy</h2>
                 <p><strong>職位：</strong>創始人兼首席開發者</p>
                 <p><strong>介紹：</strong>Maomy擁有多年的軟體開發經驗，專注於Discord機器人開發。他致力於為用戶提供最好的機器人互動體驗。</p>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="team-member">
-            <img src="sw.jpg" alt="開發者2">
+            <img src="sw.jpg" alt="img" height=100px width=100px>
             <h2>Skywars_Noob</h2>
             <p><strong>職位：</strong>網頁開發者</p>
             <p><strong>介紹：</strong>Skywars_Noob專精於網頁技術，負責Maomy Bot的網頁設計和開發。他的目標是確保每個用戶都能觀賞到簡潔、美觀且直觀的網頁。</p>
