--- a/about.html
+++ b/about.html
@@ -93,6 +93,7 @@
         <a href="index.html">首頁</a>
         <a href="about.html">關於我們</a>
         <a href="terms.html">服務條款</a>
+        <a href="disclaimer.html">免責協議</a>
         <a href="privacy.html">隱私權政策</a>
     </nav>
     <div class="container">
