--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="background.jpg" type="image/jpg" />
     <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
     <meta property="og:image" content="https://maomy.ddns.net/background.jpg">
-    <title>Maomy BOT 團隊</title>
+    <title>免責聲明</title>
     <style>
         body {
             font-family: Arial, sans-serif;
