--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     <a href="terms.html">服務條款</a>
     <a href="disclaimer.html">免責協議</a>
     <a href="privacy.html">隱私權政策</a>
+    <a href="online.html">及時狀態</a>
 </nav>
 
 <div class="container">
     <div class="section" id="introduction">
         <h1>歡迎來到Maomy BOT官方網頁！</h1>
-        <h2><a class="button-cool" href="https://discord.com/invite/uesZG4ZfKq">Maomy BOT官方Discord群組</a></h2>
-        <h2><a class="button-cool" href="https://lurl.cc/q6SWVc">邀請Maomy BOT</a></h2>
+        <h2><a class="button-cool" href="https://discord.com/invite/uesZG4ZfKq">Maomy BOT官方Discord群組</a><a class="button-cool" href="https://lurl.cc/q6SWVc">邀請Maomy BOT</a></h2>
         <p>這個機器人可以幫助您管理伺服器、提供遊戲功能、以及更多其他有趣的功能。</p>
         
         <h2>RPG系統</h2>
