--- a/about.html
+++ b/about.html
@@ -95,6 +95,7 @@
         <a href="terms.html">服務條款</a>
         <a href="disclaimer.html">免責協議</a>
         <a href="privacy.html">隱私權政策</a>
+        <a href="online.html">及時狀態</a>
     </nav>
     <div class="container">
         <h1>關於我們</h1>
