--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <a href="terms.html">服務條款</a>
     <a href="disclaimer.html">免責協議</a>
     <a href="privacy.html">隱私權政策</a>
-    <a href="online.html">即時狀態</a>
+    <a href="http://owo.freeserver.tw:20365/status/maomy">即時狀態</a>
 </nav>
 
 <div class="container">
