--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="background.jpg" type="image/jpg" />
-    <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
+    <meta name="description" content="關於開發者的網站">
     <meta property="og:image" content="https://maomy.ddns.net/background.jpg">
     <title>Maomy BOT 團隊</title>
     <style>
