--- a/status.html
+++ b/status.html
@@ -113,15 +113,6 @@
             margin-top: 40px; /* 留出一些空间 */
             font-size: 36px; /* 标题字体大小 */
         }
-        .offline-history {
-            display: none; /* 默认隐藏断线记录 */
-            color: #ff0000; /* 红色文字 */
-            font-size: 14px;
-            margin-top: 8px;
-        }
-        .show-history .offline-history {
-            display: block; /* 断线时显示断线记录 */
-        }
     </style>
 </head>
 <body>
@@ -136,20 +127,18 @@
         <a href="terms.html">服務條款</a>
         <a href="disclaimer.html">免責協議</a>
         <a href="privacy.html">隱私權政策</a>
-        <a href="http://maomy.zapto.org:20365">即時狀態</a>
+        <a href="status.html">即時狀態</a>
     </nav>
     <div class="container">
         <h1>Maomy Bot 專案即時狀態</h1>
         <div class="status-container">
             <div id="statusHTTP" class="status">
                 <div>Maomy Bot 控制面板: <span id="httpStatus" class="offline">讀取中...</span></div>
-                <div id="httpStatusHistory" class="offline-history">斷線紀錄: </div>
             </div>
         </div>
         <div class="status-container">
             <div id="statusHTTPS" class="status">
                 <div>MaomyBot官網 <span id="httpsStatus" class="offline">讀取中...</span></div>
-                <div id="httpsStatusHistory" class="offline-history">斷線紀錄: </div>
             </div>
         </div>
     </div>
@@ -158,7 +147,6 @@
         // Function to check HTTP status using Axios and server-side JSON file
         function checkHTTPStatus() {
             var httpStatusElement = document.getElementById('httpStatus');
-            var httpStatusHistoryElement = document.getElementById('httpStatusHistory');
             axios.get('https://maomy.ddns.net/data.json') // 替換成實際的 JSON 文件路徑
                 .then(function (response) {
                     var data = response.data;
@@ -168,16 +156,12 @@
                             httpStatusElement.classList.add('online');
                         }
                         httpStatusElement.textContent = '線上'; // 使用繁體中文
-                        httpStatusHistoryElement.textContent = ''; // 清空断线记录
                     } else {
                         if (httpStatusElement.classList.contains('online')) {
                             httpStatusElement.classList.remove('online');
                             httpStatusElement.classList.add('offline');
                         }
                         httpStatusElement.textContent = '離線'; // 使用繁體中文
-                        var lastOfflineTime = new Date(data.http.lastOfflineTime).toLocaleString();
-                        httpStatusHistoryElement.textContent = '最后斷線時間：' + lastOfflineTime;
-                        httpStatusHistoryElement.parentNode.classList.add('show-history'); // 显示断线记录
                     }
                 })
                 .catch(function (error) {
@@ -187,15 +171,12 @@
                         httpStatusElement.classList.add('offline');
                     }
                     httpStatusElement.textContent = '離線'; // 使用繁體中文
-                    httpStatusHistoryElement.textContent = '無法獲取最后斷線時間'; // 显示获取失败信息
-                    httpStatusHistoryElement.parentNode.classList.add('show-history'); // 显示断线记录
                 });
         }
 
         // Function to check HTTPS status using Axios and server-side JSON file
         function checkHTTPSStatus() {
             var httpsStatusElement = document.getElementById('httpsStatus');
-            var httpsStatusHistoryElement = document.getElementById('httpsStatusHistory');
             axios.get('https://maomy.ddns.net/data.json') // 替換成實際的 JSON 文件路徑
                 .then(function (response) {
                     var data = response.data;
@@ -205,16 +186,12 @@
                             httpsStatusElement.classList.add('online');
                         }
                         httpsStatusElement.textContent = '線上'; // 使用繁體中文
-                        httpsStatusHistoryElement.textContent = ''; // 清空断线记录
                     } else {
                         if (httpsStatusElement.classList.contains('online')) {
                             httpsStatusElement.classList.remove('online');
                             httpsStatusElement.classList.add('offline');
                         }
                         httpsStatusElement.textContent = '離線'; // 使用繁體中文
-                        var lastOfflineTime = new Date(data.https.lastOfflineTime).toLocaleString();
-                        httpsStatusHistoryElement.textContent = '最后斷線時間：' + lastOfflineTime;
-                        httpsStatusHistoryElement.parentNode.classList.add('show-history'); // 显示断线记录
                     }
                 })
                 .catch(function (error) {
@@ -224,8 +201,6 @@
                         httpsStatusElement.classList.add('offline');
                     }
                     httpsStatusElement.textContent = '離線'; // 使用繁體中文
-                    httpsStatusHistoryElement.textContent = '無法獲取最后斷線時間'; // 显示获取失败信息
-                    httpsStatusHistoryElement.parentNode.classList.add('show-history'); // 显示断线记录
                 });
         }
 
