--- a/status.html
+++ b/status.html
@@ -84,9 +84,9 @@
         }
         .status-container {
             display: flex;
-            gap: 20px;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            gap: 20px;
         }
         .status {
             width: 300px;
@@ -127,7 +127,7 @@
         <a href="terms.html">服務條款</a>
         <a href="disclaimer.html">免責協議</a>
         <a href="privacy.html">隱私權政策</a>
-        <a href="status.html">即時狀態</a>
+        <a href="http://maomy.zapto.org:20365">即時狀態</a>
     </nav>
     <div class="container">
         <h1>Maomy Bot 專案即時狀態</h1>
@@ -135,10 +135,8 @@
             <div id="statusHTTP" class="status">
                 <div>Maomy Bot 控制面板: <span id="httpStatus" class="offline">讀取中...</span></div>
             </div>
-        </div>
-        <div class="status-container">
             <div id="statusHTTPS" class="status">
-                <div>MaomyBot官網 <span id="httpsStatus" class="offline">讀取中...</span></div>
+                <div>MaomyBot官網: <span id="httpsStatus" class="offline">讀取中...</span></div>
             </div>
         </div>
     </div>
@@ -151,26 +149,17 @@
                 .then(function (response) {
                     var data = response.data;
                     if (data.http.online) {
-                        if (httpStatusElement.classList.contains('offline')) {
-                            httpStatusElement.classList.remove('offline');
-                            httpStatusElement.classList.add('online');
-                        }
                         httpStatusElement.textContent = '線上'; // 使用繁體中文
+                        httpStatusElement.className = 'online';
                     } else {
-                        if (httpStatusElement.classList.contains('online')) {
-                            httpStatusElement.classList.remove('online');
-                            httpStatusElement.classList.add('offline');
-                        }
                         httpStatusElement.textContent = '離線'; // 使用繁體中文
+                        httpStatusElement.className = 'offline';
                     }
                 })
                 .catch(function (error) {
                     console.error('Error fetching HTTP status:', error);
-                    if (httpStatusElement.classList.contains('online')) {
-                        httpStatusElement.classList.remove('online');
-                        httpStatusElement.classList.add('offline');
-                    }
                     httpStatusElement.textContent = '離線'; // 使用繁體中文
+                    httpStatusElement.className = 'offline';
                 });
         }
 
@@ -181,38 +170,28 @@
                 .then(function (response) {
                     var data = response.data;
                     if (data.https.online) {
-                        if (httpsStatusElement.classList.contains('offline')) {
-                            httpsStatusElement.classList.remove('offline');
-                            httpsStatusElement.classList.add('online');
-                        }
                         httpsStatusElement.textContent = '線上'; // 使用繁體中文
+                        httpsStatusElement.className = 'online';
                     } else {
-                        if (httpsStatusElement.classList.contains('online')) {
-                            httpsStatusElement.classList.remove('online');
-                            httpsStatusElement.classList.add('offline');
-                        }
                         httpsStatusElement.textContent = '離線'; // 使用繁體中文
+                        httpsStatusElement.className = 'offline';
                     }
                 })
                 .catch(function (error) {
                     console.error('Error fetching HTTPS status:', error);
-                    if (httpsStatusElement.classList.contains('online')) {
-                        httpsStatusElement.classList.remove('online');
-                        httpsStatusElement.classList.add('offline');
-                    }
                     httpsStatusElement.textContent = '離線'; // 使用繁體中文
+                    httpsStatusElement.className = 'offline';
                 });
         }
-
-        // Periodically check the status
-        setInterval(function() {
-            checkHTTPStatus();
-            checkHTTPSStatus();
-        }, 5000); // Check status every 5 seconds (adjust as needed)
 
         // Initial check on page load
         checkHTTPStatus();
         checkHTTPSStatus();
+
+        // Reload the page every 5 minutes
+        setTimeout(function() {
+            location.reload();
+        }, 300000); // 300000 ms = 5 minutes
     </script>
 </body>
 </html>
