--- a/status.html
+++ b/status.html
@@ -126,7 +126,7 @@
         <a href="terms.html">服務條款</a>
         <a href="disclaimer.html">免責協議</a>
         <a href="privacy.html">隱私權政策</a>
-        <a href="http://maomy.zapto.org:20365">即時狀態</a>
+        <a href="status.html">即時狀態</a>
     </nav>
     <div class="container">
         <h1>Maomy Bot 專案即時狀態</h1>
