--- a/privacy.html
+++ b/privacy.html
@@ -91,7 +91,7 @@
     <a href="terms.html">服務條款</a>
     <a href="disclaimer.html">免責協議</a>
     <a href="privacy.html">隱私權政策</a>
-    <a href="https://maomy.zapto.org">即時狀態</a>
+    <a href="https://status.maomy.com.mp/">即時狀態</a>
 </nav>
 
 <div class="container">
