--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
             <img src="maomy.jpg" alt="img" height=100px width=100px>
                 <h2>Maomy</h2>
                 <p><strong>職位：</strong>創始人兼首席開發者</p>
-                <p><strong>介紹：</strong>Maomy擁有多年的軟體開發經驗，專注於Discord機器人開發。他致力於為用戶提供最好的機器人互動體驗。</p>
+                <p><strong>介紹：</strong>Maomy專注於Discord機器人開發。他致力於為用戶提供最好的機器人互動體驗。</p>
             <div class="clear"></div>
         </div>
 
