--- a/inviter.html
+++ b/inviter.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=https://example.com">
-    <title>重新導向中...</title>
+    <meta http-equiv="refresh" content="5;url=https://discord.com/oauth2/authorize?client_id=1234058289747333171&permissions=8&integration_type=0&scope=bot">
+    <title>重新導向中</title>
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        a {
+            color: #1e90ff;
+        }
+    </style>
 </head>
 <body>
-    <p>頁面將在5秒鐘後重新導向。如果沒有，請<a href="https://example.com">點這裡</a>。</p>
+    <p>頁面將在5秒鐘後重新導向。如果沒有，請<a href="https://discord.com/oauth2/authorize?client_id=1234058289747333171&permissions=8&integration_type=0&scope=bot">點擊這裡</a>。</p>
 </body>
 </html>
