--- a/inviter.html
+++ b/inviter.html
@@ -38,10 +38,10 @@
 <body>
     <p>頁面將在 <span id="countdown">5</span> 秒鐘後重定向。如果沒有，請<a href="https://discord.com/oauth2/authorize?client_id=1234058289747333171&permissions=8&integration_type=0&scope=bot">點這</a>。</p>
     <div style="background-color: #2a2a2a; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
-        <img src="https://via.placeholder.com/100x100" alt="廣告icon" style="max-width: 40%; height: auto;">
+        <!-- 廣告圖片 <img src="https://via.placeholder.com/100x100" alt="廣告icon" style="max-width: 40%; height: auto;"> -->
         <div>
             <p>贊助商廣告</p>
-            <p class="advertisement-content">測試中</p>
+            <p class="advertisement-content">歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq">官方Discord群組</a></p>
         </div>
     </div>
 </body>
