--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
         <h1>歡迎來到Maomy BOT官方網頁！</h1>
         <h2><a class="button-cool" href="https://discord.com/invite/uesZG4ZfKq">Maomy BOT官方Discord群組</a><p>    </p><a class="button-cool" href="https://lurl.cc/q6SWVc">邀請Maomy BOT</a></h2>
         <p>這個機器人可以幫助您管理伺服器、提供遊戲功能、以及更多其他有趣的功能。</p>
-        
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
         <h2>RPG系統</h2>
         <p>趣味更多、競爭排行！</p>
         
@@ -128,6 +136,15 @@
         <h3>作者的話：</h3>
         <p>各位好！我是Maomy，我是一個為了給大家全部的功能使用，我的指令全部一貫使用全部伺服器皆可使用，讓各位的使用更好，也是我的初心！有任何建議 也歡迎至官方群組 開啟客服單</p>
         <p>到時採取 屬冠名治理！</p>
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 
