--- a/about.html
+++ b/about.html
@@ -118,6 +118,15 @@
         </div>
         
         <p>我們的團隊不斷努力，期望能為您帶來更多創新和便利的功能。如果您有任何建議或疑問，歡迎隨時與我們聯繫。</p>
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
