--- a/disclaimer.html
+++ b/disclaimer.html
@@ -100,7 +100,15 @@
     <div class="container">
       <h1>Maomy Bot 免責協議</h1>
       <p>歡迎使用 Maomy Bot！請在開始使用前詳細閱讀以下免責協議。當您使用 Maomy Bot 時，即表示您同意遵守以下規定：</p>
-      
+      <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
       <h2>1. 無擔保責任：</h2>
       <ol>
           <li>
@@ -119,7 +127,15 @@
   
       <h2>4. 第三方連接：</h2>
       <p>Maomy Bot 可能包含連接到第三方服務或網站的功能。我們不對第三方服務或網站的內容、安全性或隱私政策負責。</p>
-  
+      <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
       <h2>5. 法律遵循：</h2>
       <p>在使用 Maomy Bot 時，您必須遵守所有適用的法律法規。禁止使用 Maomy Bot 進行任何非法活動，包括但不限於騷擾、侵犯版權、洩露機密信息等。</p>
   
