--- a/privacy.html
+++ b/privacy.html
@@ -104,7 +104,15 @@
         <h2>解釋和定義</h2>
         <h3>解釋</h3>
         <p>首字母大寫的單詞具有在下列條件下定義的含義。這些定義無論出現在單數或複數形式中均具有相同的意義。</p>
-
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
         <h3>定義</h3>
         <p>就本隱私政策而言：</p>
         <ul>
@@ -155,7 +163,15 @@
         <p>使用數據可能包括您的設備的Internet協議地址（例如IP地址）、瀏覽器類型、瀏覽器版本、您訪問我們的服務的頁面、訪問的時間和日期、在那些頁面上花費的時間、唯一設備標識符和其他診斷數據。</p>
         <p>當您通過移動設備訪問服務時，我們可能會自動收集某些信息，包括但不限於您使用的移動設備類型、您的移動設備唯一ID、您的移動設備的IP地址、您的移動操作系統、您使用的移動Internet瀏覽器的類型、唯一設備標識符和其他診斷數據。</p>
         <p>我們也可能會收集您的瀏覽器在您訪問我們的服務時或通過移動設備訪問服務時發送的信息。</p>
-
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
         <h3>使用您的個人資料</h3>
         <p>公司可能會將個人資料用於以下目的：</p>
         <ul>
@@ -206,7 +222,15 @@
 
         <h4>法律執法</h4>
         <p>在某些情況下，如果法律要求或響應公共機構（例如法院或政府機構）的有效請求，公司可能需要披露您的個人資料。</p>
-
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
         <h4>其他法律要求</h4>
         <p>公司可能會在真誠相信此類行動是必要的情況下披露您的個人資料：</p>
         <ul>
@@ -232,7 +256,15 @@
         <p>我們可能會不時更新我們的隱私政策。我們將通過在本頁面上發布新隱私政策來通知您任何變更。</p>
         <p>在變更生效之前，我們會通過電子郵件和/或在我們的服務上顯著通知您，並更新本隱私政策頂部的“最後更新”日期。</p>
         <p>建議您定期查看本隱私政策以了解任何變更。對本隱私政策的更改在本頁面發布時生效。</p>
-
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
         <h2>聯繫我們</h2>
         <p>如果您對本隱私政策有任何疑問，您可以聯繫我們：</p>
         <ul>
