--- a/terms.html
+++ b/terms.html
@@ -117,7 +117,15 @@
             <li>本Bot可能會收集並處理用戶提供的部分信息。這些信息僅用於提供和改進本Bot的服務。</li>
             <li>本Bot將采取合理的措施保護用戶的信息安全，但不對因不可抗力或非本Bot原因導致的信息泄露負責。</li>
         </ul>
-
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
         <h2>四、知識產權</h2>
         <ul>
             <li>本Bot的所有代碼、設計、標識及相關資料均屬於本Bot開發者所有，受著作權法及其他相關法律保護。</li>
@@ -136,7 +144,15 @@
             <li>用戶繼續使用本Bot即表示接受修改後的條款。如用戶不同意修改後的條款，請立即停止使用本Bot。</li>
             <li>本Bot保留在任何時間終止或暫停本Bot服務的權利，無需事先通知用戶。</li>
         </ul>
-
+        <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
+            <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
+            <div>
+                <p style="margin: 0; font-size: 1.2em;">贊助商廣告</p>
+                <p style="margin: 0; font-size: 1.1em;">
+                    歡迎贊助，加入<a href="https://discord.gg/uesZG4ZfKq" style="color: #ffffff; font-weight: bold; text-decoration: none;">官方Discord群組</a>
+                </p>
+            </div>
+        </div>
         <h2>七、其他</h2>
         <ul>
             <li>本服務條款構成用戶與本Bot之間的完整協議，並取代先前的所有協議和諒解。</li>
