--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header>
-        <a href="https://lurl.cc/q6SWVc" class="invite-btn">邀請Bot</a>
+        <a href="https://maomy.com.mp/inviter" class="invite-btn">邀請Bot</a>
         <h1>Maomy BOT 網頁</h1>
     </header>
     
