--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="background.jpg" type="image/jpg" />
     <meta name="description" content="關於開發者的網站">
-    <meta property="og:image" content="https://maomy.ddns.net/background.jpg">
+    <meta property="og:image" content="https://maomy.com.mp/background.jpg">
     <title>Maomy BOT 團隊</title>
     <style>
         body {
