--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="background.jpg" type="image/jpg" />
     <meta name="description" content="邀請機器人即可享受更好的管理伺服器方式、RPG系統讓你更好玩、高度自定義、指令採取全伺服器皆用！">
-    <meta property="og:image" content="https://maomy.ddns.net/background.jpg">
+    <meta property="og:image" content="https://maomy.com.mp/background.jpg">
     <title>隱私權政策</title>
     <style>
         body {
@@ -81,7 +81,7 @@
 <body>
 
 <header>
-    <a href="https://lurl.cc/q6SWVc" class="invite-btn">邀請Bot</a>
+    <a href="https://maomy.com.mp/inviter" class="invite-btn">邀請Bot</a>
     <h1>Maomy BOT 網頁</h1>
 </header>
 
