--- a/dc_inviter.html
+++ b/dc_inviter.html
@@ -45,7 +45,7 @@
             </p>
         </div>
     </div>
-    <h1>正在導向至<code>Maomy BOT支援群組</code>89</h1>
+    <h1>正在導向至<code>Maomy BOT支援群組</code></h1>
     <p>頁面將在 <span id="countdown">5</span> 秒鐘後重定向。如果沒有，請<a href="https://discord.gg/uesZG4ZfKq">點這</a>。</p>
     <div style="background-color: #2a2a2a; color: #ffffff; padding: 20px; border-radius: 10px; margin: 20px 0; text-align: center;">
         <!-- 广告图片 --><!-- <img src="https://via.placeholder.com/100x100" alt="广告icon" style="max-width: 40%; height: auto;"> -->
