--- a/dc_inviter.html
+++ b/dc_inviter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=https://discord.com/oauth2/authorize?client_id=1234058289747333171&permissions=8&integration_type=0&scope=bot">
+    <meta http-equiv="refresh" content="5;url=https://discord.gg/uesZG4ZfKq">
     <title>Redirecting...</title>
     <style>
         body {
