--- a/inviter.html
+++ b/inviter.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5;url=https://discord.com/oauth2/authorize?client_id=1234058289747333171&permissions=8&integration_type=0&scope=bot">
-    <title>Redirecting...</title>
+    <link rel="icon" href="background.jpg" type="image/jpg" />
+    <meta name="description" content="點我邀請MaomyBOT！">
+    <meta property="og:image" content="https://maomy.com.mp/link.png">
+    <title>Maomy BOT邀請連結</title>
     <style>
         body {
             background-color: #121212;
