--- a/dc_inviter.html
+++ b/dc_inviter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5;url=https://discord.gg/uesZG4ZfKq">
     <link rel="icon" href="background.jpg" type="image/jpg" />
-    <meta name="description" content="點我進入MaomyBOT支援群組！">
+    <meta name="description" content="趕快進入MaomyBOT支援群組！">
     <meta property="og:image" content="https://maomy.com.mp/link.png">
     <title>Maomy BOT支援群組連結</title>
     <style>
