--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 <body>
 
 <header>
-    <a href="https://maomy.com.mp/inviter" class="invite-btn">邀請Bot</a>
+    <a href="https://maomy.com.mp/inviter" class="invite-btn">Bot邀請連結</a>
+    <a href="https://maomy.com.mp/dc_inviter" class="invite-btn">Bot支援群組</a>
+    <a href="https://maomy.wuaze.com/" class="invite-btn">Bot控制面板</a>
     <h1>Maomy BOT 網頁</h1>
 </header>
 
